--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
   <div id="container">
-
   </div>
+  <div id="options">
+<div id="search-box"><input type="text-box"><input type="submit" value="Search" width="50px" height="50px"></div>
+  </div>
+
 </body>
 </html>
